samples/_failures_safe/1761040040_e6e9ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96562cb7.c: In function ‘main’:
./samples/SAFE/__tmp_96562cb7.c:143:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  143 |     struct Matrix mat1
      |            ^~~~~~
./samples/SAFE/__tmp_96562cb7.c:143:12: error: expected declaration or statement at end of input
